# KSCrash

./: .clang-format  .clang-format-ignore  .git-blame-ignore-revs  .gitignore  .gitmodules  .mise.toml  .swift-format  .travis.yml  Architecture.md  CHANGELOG  CLAUDE.md  CODE_TOUR.md  CONTRIBUTING.md  Gemfile  KSCrash.podspec  KSCrashAblyFork.podspec  LICENSE  Makefile  Package.swift  Package@swift-5.1.swift  PrivacyInfo.xcprivacy  Project.swift  README.md  SECURITY.md  TODO.md  Workspace.swift  ksp error  ksp mod crash  setup-dev.sh  todo.md  todo.txt
.claude/: CLAUDE.md
.claude/rules/: api-stability.md  async-signal-safety.md  code-style.md  monitor-sidecars.md  monitors.md  packaging.md  run-context.md  run-id.md  threadcrumb.md
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-issue-template.yml  bug.yml  config.yml  feature-request-template.yml  general-question-template.yml  integration-issue-template.yml
.github/data/: benchmark-tests.json
.github/scripts/: binary_size.py  infer_clean_compile_commands.py  parse_benchmarks.py  perfcomp.py
.github/workflows/: api-check.yml  benchmarks.yml  binary-size.yml  browserstack.yml  build-devices.yml  build-sample.yml  clang-format.yml  cocoapods-lint.yml  dependency-review.yml  infer.yml  integration-tests.yml  leaks.yml  (+8 more)
Android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
Android/app/src/androidTest/java/org/stenerud/kscrash/: ExampleInstrumentedTest.java
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/org/stenerud/kscrash/: IKSCrashFilterCompletionCallback.java  KSCrash.java  KSCrashInstallation.java  KSCrashInstallationEmail.java  KSCrashInstallationStandard.java  KSCrashReportFilter.java  KSCrashReportFilterCreateTempFiles.java  KSCrashReportFilterDeleteFiles.java  KSCrashReportFilterEmail.java  KSCrashReportFilterGZipCompress.java  KSCrashReportFilterHttp.java  KSCrashReportFilterJSONEncode.java  KSCrashReportFilterPipeline.java  KSCrashReportFilteringFailedException.java  MainActivity.java  MultipartPostBody.java
Android/app/src/main/res/layout/: activity_main.xml
Android/app/src/main/res/values/: strings.xml
Android/app/src/main/res/xml/: provider_paths.xml
Android/app/src/test/java/org/stenerud/kscrash/: ExampleUnitTest.java  KSCrashReportFilterFilesTest.java  KSCrashReportFilterGZipCompressTest.java  KSCrashReportFilterJSONEncodeTest.java
Benchmarks/: CLAUDE.md  Project.swift
Example-Reports/: Abort.json  Abort.txt  BadPointer.json  BadPointer.txt  CorruptMemory.json  CorruptMemory.txt  CorruptObject.json  CorruptObject.txt  CrashInHandler.json  CrashInHandler.txt  Hang.json  MainThreadDeadlock.json  MainThreadDeadlock.txt  NSException.json  NSException.txt  Profile.json  StackOverflow.json  StackOverflow.txt  WatchdogTimeout.json  Zombie.json  Zombie.txt  ZombieNSException.json  ZombieNSException.txt  _README.md
ExampleReports/: AppleSideBySideReport-abort.txt  AppleSideBySideReport-bad-pointer.txt  AppleSideBySideReport-corrupt-memory.txt  AppleSideBySideReport-corrupt-object.txt  AppleSideBySideReport-deadlocked-main-thread.txt  AppleSideBySideReport-deallocated-object.txt  AppleSideBySideReport-deallocated-proxy.txt  AppleSideBySideReport-nsexception.txt  AppleSideBySideReport-null-pointer.txt  AppleSideBySideReport-recrash.txt  AppleSideBySideReport-stack-overflow.txt  AppleSideBySideReport-zombie-nsexception.txt  BadPointer-AppleSideBySideReport.txt  BadPointer-StandardReport.json  NSException-AppleSideBySideReport.txt  NSException-StandardReport.json  README.md  StandardReport-abort.json  StandardReport-bad-pointer.json  StandardReport-corrupt-memory.json  StandardReport-corrupt-object.json  StandardReport-deadlocked-main-thread.json  StandardReport-deallocated-object.json  StandardReport-deallocated-proxy.json  StandardReport-nsexception.json  StandardReport-null-pointer.json  StandardReport-recrash.json  StandardReport-stack-overflow.json  StandardReport-zombie-nsexception.json
KSCrash.xcworkspace/: contents.xcworkspacedata
Mac/: Configuration.h
Mac.xcworkspace/: contents.xcworkspacedata
Proposals/: 2.5.1-decision-making.md  KSCrash-3.0-Proposal.md
Samples/: CLAUDE.md  Project.swift
TVOS.xcworkspace/: contents.xcworkspacedata
WatchOS.xcworkspace/: contents.xcworkspacedata
Webapp/: .gitignore  README.md  clean.sh  listener.py  module_locator.py  run_external.sh  run_internal.sh
iOS/: Configuration.h
iOS.xcworkspace/: contents.xcworkspacedata
namespacer/: README.md  generate.sh  namespace-check.sh  namespacer.py  requirements.txt
scripts/: api-break-ignore.txt  api-diff-annotate.py  api-diff-filter-c.py  api-diff-summary.py  api-diff.sh  api_diff_classify.py  run_benchmarks.sh  toggle-unsafe-flags.sh
wiki-for-review/: A-Brief-Tour-of-the-KSCrash-Code-and-Architecture.md  Home.md  KSCrash-Architecture.md  Migration-Guide-for-KSCrash-2.5-to-2.6.md
(+1508 files in other folders)
